Fixed meta tag and padding on mobile

--- a/style.css
+++ b/style.css
@@ -112,6 +112,12 @@ html.is-animating .transition-fade {
     Responsive
 __________________________*/
 @media screen and (max-width: 820px) {
+  #navbar {
+    padding: 20px;
+  }
+  #main-doc {
+    padding: 10px 20px;
+  }
   #wrapper {
     grid-template-columns: 40% 60%;
   }
